# PyCDC

./: README.md  setup.cfg  setup.py  test.py
data/: sales_data.csv
history/: sales_data.csv
pycdc/: __init__.py  exception.py
pycdc.egg-info/: PKG-INFO  SOURCES.txt
