# setup.cfg
[metadata]
name = pycdc
version = 1.1
author = Vijay Kumar
author_email = vijay.kumar.1997@outlook.com
keywords = cdc,Change Data Capture

# add a description of your package
description = This package enables the generation of a DataFrame with Change Data Capture (CDC) flags ('I' for Insert, 'U' for Update, and 'D' for Delete) by comparing historical and source data files
long_description = file: README.md
long_description_content_type = text/markdown

# add the url to your repository/homepage and version release
url = https://github.com/1997vijay/PyCDC.git


# define your license and license file
license = MIT
license_files = LICENSE.txt

classifiers = 
    # for a full list of classifiers see https://pypi.org/classifiers/
    Development Status :: 4 - Beta
    Intended Audience :: Developers      
    Topic :: Software Development
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

python_requires = >=3.9